# LLM-SOFTWARE

./: .gitignore  README.md  pyproject.toml
examples/books_toscrape/: schema.json  tests.json
scrapy_cli/: cli.py  pipeline.py
scrapy_cli/agents/: base.py  discovery.py  dom_mapping.py  evaluation.py  implementation.py  test_runner.py
scrapy_cli/tools/: browser.py  exec.py  filesystem.py
